infra/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ruggine
  namespace: ruggine
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - codecraft.engineering
    secretName: codecraft-engineering-tls
  rules:
  - host: codecraft.engineering
    http:
      paths:
      - path: /url
        pathType: Prefix
        backend:
          service:
            name: ruggine
            port:
              name: http
